--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
+        "axios": "^0.27.2",
         "ethers": "^5.6.5"
     },
     "devDependencies": {
