--- a/template.yaml
+++ b/template.yaml
@@ -14,6 +14,7 @@ Resources:
   LockdropTable:
     Type: AWS::Serverless::SimpleTable
     Properties:
+      TableName: lockdropChoices
       PrimaryKey:
         Name: ethAddress
         Type: String
